Add tests
Reviewed-by: mcimadamore